# robot_rover

./: .dockerignore  .gitignore  Dockerfile.rpi  Dockerfile.server  README.md  config.rviz  docker-build.rpi.sh  docker-build.server.sh  docker-run.rpi.sh  docker-run.server.sh  docker_entrypoint.sh  rpi.sh
docker/: Dockerfile.rpi  Dockerfile.server  nav.compose.yml  rpi.compose.yml
scripts/: detect-webcams.sh  docker_entrypoint.sh  rpi.docker-build.sh  rpi.docker-run.sh  server.docker-build.sh  server.docker-run.sh
src/arduino_comm/: package.xml  setup.py
src/arduino_comm/arduino_comm/: arduino_comm.py
src/diffdrive_pubsub/: README.md  package.xml  setup.cfg  setup.py
src/diffdrive_pubsub/diffdrive_pubsub/: diffdrive_pubsub.py
src/hardware/rover/: rover.ino
src/joystick_control/: package.xml  setup.py
src/joystick_control/joystick_control/: joystick_control.py
src/joystick_control/launch/: local_robot_control.launch.py  remote_robot_control.launch.py  robot_control.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: view_robot.rviz
src/robot_description/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/robot_description/launch/: gazebo.launch.py  rsp.launch.py
src/robot_description/worlds/: basic.sdf
src/robot_tank_desc/: CMakeLists.txt  package.xml
src/robot_tank_desc/config/: controllers.yaml  gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  (+3 more)
src/rpi/: package.xml  setup.cfg  setup.py
src/rpi_comm/: package.xml  setup.cfg  setup.py
(+35 files in other folders)
